--- a/public/css/app.css
+++ b/public/css/app.css
@@ -109,3 +109,8 @@ body {
 .form-spacing-top {
     margin-top: 30px;
 }
+
+#trTochangeHeight {
+    margin-top: -36px;
+    padding-left: 115px;
+}
